--- a/src/app/udacity-advantage-selling-points/udacity-advantage-selling-points.component.css
+++ b/src/app/udacity-advantage-selling-points/udacity-advantage-selling-points.component.css
@@ -1,3 +1,15 @@
+section{
+  margin-bottom: 3rem;
+}
+
+section > div {
+  justify-content: center;
+}
+
+p {
+  max-width: 400px;
+  margin: 0 auto;
+}
 .select-point {
   display: flex;
 }
